--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -6,10 +6,9 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.css">
+  <link rel="stylesheet" href="./assets/css/bootstrap.css">
 </head>
-<body>
+<body class="grad">
   <app-root></app-root>
 </body>
 </html>
